# Inventory_management_website

./: .dockerignore  .env  .gitignore  Dockerfile  TODO.md  db.sqlite3  inventory_db_clean.sql  package-lock.json  pyproject.toml  render.yaml  requirements.txt  settings.py  wsgi.py
angular-auth-app/: README.md  angular.json  package-lock.json  package.json
angular-auth-app/src/app/: app.component.ts  app.config.ts
angular-auth-app/src/app/components/dashboard/: dashboard.component.ts
angular-auth-app/src/app/components/login/: login.component.html  login.component.ts
angular-auth-app/src/app/components/register/: register.component.html  register.component.ts
inventory/: forms.py  models.py  serializers.py  tests.py  urls.py  views.py
inventory/migrations/: 0002_inventoryitem.py  0003_user.py  0004_alter_user_options_remove_user_username_and_more.py  0006_customuser.py  0007_alter_item_name_billpage.py  0008_delete_billpage.py
inventory/templates/billing/: create_bill.html
inventory/templates/inventory/: add_inventory_item.html  bill_form.html  bill_page.html  home.html  index.html  login.html
inventory_management/: package.json  settings.py  urls.py
inventory_management/inventory/: urls.py  views.py
inventory_management/inventory/migrations/: 0005_delete_user.py
inventory_management/inventory/templates/inventory/: bill_form.html  bill_page.html  inventory_list.html  login.html  register.html  update_inventory_item.html
inventory_management/inventory_management/: settings.py
inventory_management/inventory_management/inventory/: models.py  serializers.py  views.py
inventory_management/inventory_management/inventory/migrations/: 0001_initial.py
inventory_management/inventory_management/inventory/templates/inventory/: bill_page.html  register.html
